--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,11 +40,15 @@ jobs:
           name: Deploy
           command: >
               helm upgrade 
-              namespace-test helm-charts-p2 -i -f helm-charts-p2/values.yaml 
-              -n namespace-test
+              tezos-link helm-charts-p2 -i -f helm-charts-p2/values.yaml 
+              -n tezos-link
               --create-namespace
               --set api.image.tag=$TAG 
               --set api.image.repository='rg.fr-par.scw.cloud/tezoslink/p1-api'
+              --set front.image.tag=$TAG 
+              --set front.image.repository='rg.fr-par.scw.cloud/tezoslink/p1-frontend'
+              --set proxy.image.tag=$TAG 
+              --set proxy.image.repository='rg.fr-par.scw.cloud/tezoslink/p1-proxy'
 
 
 workflows:
