--- a/Dockerfiles/Dockerfile.api
+++ b/Dockerfiles/Dockerfile.api
@@ -21,16 +21,13 @@ FROM node:19-alpine AS production
 
 WORKDIR tezosLink
 
-RUN adduser -D nextjs --uid 10000 && chown -R nextjs .
+RUN adduser -D tezoslinkuser --uid 10000 && chown -R tezoslinkuser .
 
-COPY --from=builder --chown=nextjs tezosLink/node_modules ./node_modules
-COPY --from=builder --chown=nextjs tezosLink/public ./public
-COPY --from=builder --chown=nextjs tezosLink/dist/api ./src/api
-COPY --from=builder --chown=nextjs tezosLink/.next ./.next
+COPY --from=builder --chown=tezoslinkuser tezosLink/node_modules ./node_modules
+COPY --from=builder --chown=tezoslinkuser tezosLink/dist/api ./src/api
 
-COPY --from=builder --chown=nextjs tezosLink/package.json ./package.json
-#COPY --from=builder --chown=nextjs tezosLink/next.config.js ./next.config.js
+COPY --from=builder --chown=tezoslinkuser tezosLink/package.json ./package.json
 
-USER nextjs
+USER tezoslinkuser
 
-CMD ["npm", "run dev"]
+CMD ["npm", "run api:start"]
