--- a/Dockerfiles/Dockerfile.front
+++ b/Dockerfiles/Dockerfile.front
@@ -21,16 +21,16 @@ FROM node:19-alpine AS production
 
 WORKDIR tezosLink
 
-RUN adduser -D nextjs --uid 10000 && chown -R nextjs .
+RUN adduser -D tezoslinkuser --uid 10000 && chown -R tezoslinkuser .
 
-COPY --from=builder --chown=nextjs tezosLink/node_modules ./node_modules
-COPY --from=builder --chown=nextjs tezosLink/public ./public
-COPY --from=builder --chown=nextjs tezosLink/dist/front ./src/api
-COPY --from=builder --chown=nextjs tezosLink/.next ./.next
+COPY --from=builder --chown=tezoslinkuser tezosLink/node_modules ./node_modules
+COPY --from=builder --chown=tezoslinkuser tezosLink/public ./public
+COPY --from=builder --chown=tezoslinkuser tezosLink/dist/front ./src/front
+COPY --from=builder --chown=tezoslinkuser tezosLink/.next ./.next
 
-COPY --from=builder --chown=nextjs tezosLink/package.json ./package.json
-#COPY --from=builder --chown=nextjs src/front/next.config.js ./next.config.js (à voir avec isma)
+COPY --from=builder --chown=tezoslinkuser tezosLink/package.json ./package.json
+#COPY --from=builder --chown=tezoslinkuser src/front/next.config.js ./next.config.js 
 
-USER nextjs
+USER tezoslinkuser
 
-CMD ["npm", "run"]
+CMD ["npm", "run web:start"]
