--- a/Dockerfiles/Dockerfile.proxy
+++ b/Dockerfiles/Dockerfile.proxy
@@ -21,16 +21,13 @@ FROM node:19-alpine AS production
 
 WORKDIR tezosLink
 
-RUN adduser -D nextjs --uid 10000 && chown -R nextjs .
+RUN adduser -D tezoslinkuser --uid 10000 && chown -R tezoslinkuser .
 
-COPY --from=builder --chown=nextjs tezosLink/node_modules ./node_modules
-COPY --from=builder --chown=nextjs tezosLink/public ./public
-COPY --from=builder --chown=nextjs tezosLink/dist/rpc-gateway ./src/api
-COPY --from=builder --chown=nextjs tezosLink/.next ./.next
+COPY --from=builder --chown=tezoslinkuser tezosLink/node_modules ./node_modules
+COPY --from=builder --chown=tezoslinkuser tezosLink/dist/rpc-gateway ./src/rpc-gateway
 
-COPY --from=builder --chown=nextjs tezosLink/package.json ./package.json
-#COPY --from=builder --chown=nextjs src/front/next.config.js ./next.config.js (à voir avec isma)
+COPY --from=builder --chown=tezoslinkuser tezosLink/package.json ./package.json
 
-USER nextjs
+USER tezoslinkuser
 
-CMD ["npm", "run"]
+CMD ["npm", "run rpc-gateway:start"]
