--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,6 +45,10 @@ jobs:
               --create-namespace
               --set api.image.tag=$TAG 
               --set api.image.repository='rg.fr-par.scw.cloud/tezoslink/p1-api'
+              --set front.image.tag=$TAG 
+              --set front.image.repository='rg.fr-par.scw.cloud/tezoslink/p1-front'
+              --set proxy.image.tag=$TAG 
+              --set proxy.image.repository='rg.fr-par.scw.cloud/tezoslink/p1-proxy'
 
 
 workflows:
