--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,8 +40,8 @@ jobs:
           name: Deploy
           command: >
               helm upgrade 
-              namespace-test helm-charts-p2 -i -f helm-charts-p2/values.yaml 
-              -n namespace-test
+              tezos-link helm-charts-p2 -i -f helm-charts-p2/values.yaml 
+              -n tezos-link
               --create-namespace
               --set api.image.tag=$TAG 
               --set api.image.repository='rg.fr-par.scw.cloud/tezoslink/p1-api'
