--- a/helm-charts-p2/values.yaml
+++ b/helm-charts-p2/values.yaml
@@ -165,7 +165,7 @@ proxy:
       repository: rg.fr-par.scw.cloud/tezoslink/p1-proxy
       pullPolicy: IfNotPresent
       # Overrides the image tag whose default is the chart appVersion.
-      tag: "0.1.0"
+      tag: 0.1.0
     
     env:
       DATABASE_USERNAME: "tz-backend"
