--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,8 +47,8 @@ jobs:
               --set api.image.repository='rg.fr-par.scw.cloud/tezoslink/p1-api'
               --set front.image.tag=$TAG 
               --set front.image.repository='rg.fr-par.scw.cloud/tezoslink/p1-frontend'
-              --set proxy.image.tag=$TAG 
-              --set proxy.image.repository='rg.fr-par.scw.cloud/tezoslink/p1-proxy'
+              --set proxy.testnet.image.tag=$TAG 
+              --set proxy.testnet.image.repository='rg.fr-par.scw.cloud/tezoslink/p1-proxy' 
 
 
 workflows:
