--- a/Dockerfiles/Dockerfile.front
+++ b/Dockerfiles/Dockerfile.front
@@ -25,7 +25,8 @@ RUN adduser -D tezoslinkuser --uid 10000 && chown -R tezoslinkuser .
 
 COPY --from=builder --chown=tezoslinkuser tezosLink/node_modules ./node_modules
 COPY --from=builder --chown=tezoslinkuser tezosLink/public ./public
-COPY --from=builder --chown=tezoslinkuser tezosLink/dist/front ./src/front
+COPY --from=builder --chown=tezoslinkuser tezosLink/dist/entries ./dist/entries
+COPY --from=builder --chown=tezoslinkuser tezosLink/dist/front ./dist/front
 COPY --from=builder --chown=tezoslinkuser tezosLink/.next ./.next
 
 COPY --from=builder --chown=tezoslinkuser tezosLink/package.json ./package.json
