--- a/charts/templates/rpc-gateway/rpcgw.ingress.yaml
+++ b/charts/templates/rpc-gateway/rpcgw.ingress.yaml
@@ -1,15 +1,15 @@
 {{ range $network, $data := .Values.proxy }}
 ---
-{{- if and $data.enabled $data.ingress.enabled -}}
+{{- if and $data.enabled $data.ingress.enabled }}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ include "helpers.fullname" $ }}-proxy-{{ $network }}
   namespace: {{ include "helpers.namespace" $ | quote }}
   annotations: 
-{{ toYaml $data.ingress.annotations | indent 4 }}
+    {{ toYaml $data.ingress.annotations | nindent 4 }}
   labels:
-{{ toYaml $data.ingress.labels | indent 4 }}
+    {{ toYaml $data.ingress.labels | nindent 4 }}
 spec:
   tls:
   - hosts: {{ $data.ingress.tls.hosts }}
@@ -25,5 +25,5 @@ spec:
             name: {{ include "helpers.fullname" $ }}-proxy-{{ $network }}
             port:
               number: {{ $data.service.ports.http }}
-{{- end -}}
+{{- end }}
 {{ end }}
