--- a/charts/templates/rpc-gateway/rpcgw.service.yaml
+++ b/charts/templates/rpc-gateway/rpcgw.service.yaml
@@ -6,7 +6,7 @@ kind: Service
 metadata:
   name: {{ include "helpers.fullname" $ }}-proxy-{{ $network }}
   namespace: {{ include "helpers.namespace" $ | quote }}
-  labels: {{ include "helpers.labels.proxy" (dict "network" $network) | nindent 4 }}
+  labels: {{ include "helpers.labels.proxy" (dict "root" $ "network" $network) | nindent 4 }}
   annotations: 
     {{ toYaml $data.service.annotations | nindent 4 | trim }}
 spec:
@@ -28,6 +28,6 @@ spec:
       nodePort: {{ $data.service.nodePorts.http }}
 {{- end }}
   selector:
-{{- include "helpers.proxy.selectorLabels" $ | nindent 8 }}
+{{- include "helpers.proxy.selectorLabels" (dict "root" $ "network" $network) | nindent 8 }}
 {{- end }}
 {{ end }}
