--- a/charts/templates/rpc-gateway/rpcgw.deployment.yaml
+++ b/charts/templates/rpc-gateway/rpcgw.deployment.yaml
@@ -62,6 +62,15 @@ spec:
             - name: {{ $key }}
               value: {{ $val | quote }}
           {{- end }}
+          {{ with $root := $ }}
+          {{- range $key, $val := $data.secret }}
+            - name: {{ $key }}
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "helpers.fullname" $root }}-proxy-{{ $network }}
+                  key: {{ $key | quote}}
+          {{- end }}
+          {{ end }}
           ports:
             - name: http
               containerPort: 8001
@@ -89,9 +98,6 @@ spec:
             timeoutSeconds: {{ $data.readinessProbe.timeoutSeconds }}
             failureThreshold: {{ $data.readinessProbe.failureThreshold }}
             successThreshold: {{ $data.readinessProbe.successThreshold }}
-          {{- end }}
-          {{- if $data.containerSecurityContext.enabled }}
-          securityContext: {{- omit $data.containerSecurityContext "enabled" | toYaml | nindent 12 }}
           {{- end }}
       {{- if $data.podSecurityContext.enabled }}
       securityContext: {{- omit $data.podSecurityContext "enabled" | toYaml | nindent 8 }}
