--- a/charts/templates/api/api.secret.yaml
+++ b/charts/templates/api/api.secret.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "helpers.fullname" . }}-secret
+  name: {{ include "helpers.fullname" . }}-api
 data:
   {{- range $key, $val := .Values.api.secret }}
   {{ $key }}: {{ $val | quote }}
