--- a/Dockerfiles/Dockerfile.api
+++ b/Dockerfiles/Dockerfile.api
@@ -6,6 +6,7 @@ WORKDIR tezosLink
 COPY package*.json ./
 
 RUN npm install --frozen-lockfile
+RUN npm install -g prisma
 
 # Rebuild the source code only when needed
 FROM node:19-alpine AS builder
@@ -14,6 +15,7 @@ WORKDIR tezosLink
 
 COPY . .
 COPY --from=deps tezosLink/node_modules ./node_modules
+COPY --from=deps tezosLink/prisma prisma
 RUN npm run build
 
 # Production image, copy all the files and run next
