--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "dependencies": {
     "@prisma/client": "^4.9.0",
     "apexcharts": "^3.36.3",
+    "axios": "^1.3.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "classnames": "^2.3.2",
