--- a/Dockerfiles/Dockerfile.api
+++ b/Dockerfiles/Dockerfile.api
@@ -3,7 +3,7 @@ FROM node:19-alpine AS deps
 
 WORKDIR tezosLink
 
-COPY package*.json ./
+COPY package.json ./
 
 RUN npm install --frozen-lockfile
 RUN npm install -g prisma
