--- a/Dockerfiles/Dockerfile.api
+++ b/Dockerfiles/Dockerfile.api
@@ -6,8 +6,8 @@ WORKDIR tezosLink
 COPY package.json ./
 
 RUN npm install --frozen-lockfile
-RUN npm install -g prisma
-RUN prisma generate
+# RUN npm install -g prisma
+# RUN prisma generate
 
 
 # Rebuild the source code only when needed
