--- a/Dockerfiles/Dockerfile.front
+++ b/Dockerfiles/Dockerfile.front
@@ -36,3 +36,4 @@ COPY --from=builder --chown=tezoslinkuser tezosLink/package.json ./package.json
 USER tezoslinkuser
 
 CMD ["npm", "run", "web:start"]
+EXPOSE 3000
