--- a/Dockerfiles/Dockerfile.api
+++ b/Dockerfiles/Dockerfile.api
@@ -6,6 +6,9 @@ WORKDIR tezosLink
 COPY package.json ./
 
 RUN npm install --frozen-lockfile
+# RUN npm install -g prisma
+# RUN prisma generate
+
 
 # Rebuild the source code only when needed
 FROM node:19-alpine AS builder
@@ -24,10 +27,13 @@ WORKDIR tezosLink
 RUN adduser -D tezoslinkuser --uid 10000 && chown -R tezoslinkuser .
 
 COPY --from=builder --chown=tezoslinkuser tezosLink/node_modules ./node_modules
-COPY --from=builder --chown=tezoslinkuser tezosLink/dist/api ./src/api
+COPY --from=builder --chown=tezoslinkuser tezosLink/dist/api ./dist/api
+COPY --from=builder --chown=tezoslinkuser tezosLink/dist/entries ./dist/entries
+COPY --from=builder --chown=tezoslinkuser tezosLink/dist/common ./dist/common
 
 COPY --from=builder --chown=tezoslinkuser tezosLink/package.json ./package.json
 
 USER tezoslinkuser
 
-CMD ["npm", "run api:start"]
+CMD ["npm", "run", "api:start"]
+EXPOSE 3001
