--- a/package.json
+++ b/package.json
@@ -73,5 +73,8 @@
     "@types/react-dom": "^18.0.10",
     "@types/uuid": "^9.0.0",
     "nodemon": "^2.0.20"
+  },
+  "prisma": {
+    "schema": "src/common/databases/schema.prisma"
   }
 }
