--- a/Dockerfiles/Dockerfile.api
+++ b/Dockerfiles/Dockerfile.api
@@ -11,7 +11,7 @@ ENV DATABASE_NAME=${DATABASE_NAME}
 
 WORKDIR tezosLink
 
-RUN npx prisma generate
+RUN npx prisma generate ./dist/common/databases/schema.prisma
 COPY package.json ./
 
 RUN npm install --frozen-lockfile
@@ -36,7 +36,7 @@ COPY --from=builder --chown=tezoslinkuser tezosLink/node_modules ./node_modules
 COPY --from=builder --chown=tezoslinkuser tezosLink/dist/api ./dist/api
 COPY --from=builder --chown=tezoslinkuser tezosLink/dist/entries ./dist/entries
 COPY --from=builder --chown=tezoslinkuser tezosLink/dist/common ./dist/common
-COPY --from=builder --chown=tezoslinkuser tezosLink/src/common/databases/ ./src/common/databases/
+#COPY --from=builder --chown=tezoslinkuser tezosLink/src/common/databases/ ./src/common/databases/
 COPY --from=builder --chown=tezoslinkuser tezosLink/package.json ./package.json
 
 USER tezoslinkuser
