--- a/Dockerfiles/Dockerfile.front
+++ b/Dockerfiles/Dockerfile.front
@@ -39,4 +39,5 @@ COPY --from=builder --chown=tezoslinkuser tezosLink/package.json ./package.json
 
 USER tezoslinkuser
 
+EXPOSE 3000
 CMD ["npm", "run", "web:start"]
