--- a/helm-charts-p2/templates/mainnet/proxy.ingress.yaml
+++ b/helm-charts-p2/templates/mainnet/proxy.ingress.yaml
@@ -4,13 +4,13 @@ metadata:
   name: {{ include "helpers.fullname" . }}-proxy
   namespace: {{ include "helpers.namespace" . | quote }}
   annotations: 
-{{toYaml .Values.proxy.testnet.ingress.annotations | indent 4 }}
+{{toYaml .Values.proxy.mainnet.ingress.annotations | indent 4 }}
 spec:
   tls:
-  - hosts: {{ .Values.proxy.testnet.ingress.tls.hosts }}
-    secretName: {{ .Values.proxy.testnet.ingress.tls.secretName }}
+  - hosts: {{ .Values.proxy.mainnet.ingress.tls.hosts }}
+    secretName: {{ .Values.proxy.mainnet.ingress.tls.secretName }}
   rules:
-  - host: {{ .Values.proxy.testnet.ingress.host }}
+  - host: {{ .Values.proxy.mainnet.ingress.host }}
     http:
       paths:
       - path: /
@@ -19,4 +19,4 @@ spec:
           service:
             name: {{ include "helpers.fullname" . }}-proxy
             port:
-              number: {{ .Values.proxy.testnet.service.ports.http }}
+              number: {{ .Values.proxy.mainnet.service.ports.http }}
