Fix Variables in helm

--- a/Dockerfiles/Dockerfile.api
+++ b/Dockerfiles/Dockerfile.api
@@ -1,13 +1,15 @@
 # Install dependencies only when needed
 FROM node:19-alpine AS deps
 
-ARG DATABASE_HOSTNAME
+ENV DATABASE_HOSTNAME=${DATABASE_HOSTNAME}
+ENV DATABASE_PORT=${DATABASE_PORT}
+ENV DATABASE_USER=${DATABASE_USER}
+ENV DATABASE_PASSWORD=${DATABASE_PASSWORD}
+ENV DATABASE_NAME=${DATABASE_NAME}
 
-ENV DATABASE_HOSTNAME "$DATABASE_HOSTNAME"
-ENV DATABASE_PORT "$DATABASE_PORT"
-ENV DATABASE_USER "$DATABASE_USER"
-ENV DATABASE_PASSWORD "$DATABASE_PASSWORD"
-ENV DATABASE_NAME "$DATABASE_NAME"
+ENV NEXT_PUBLIC_API_LABEL=${NEXT_PUBLIC_API_LABEL}
+ENV NEXT_PUBLIC_API_PORT=${NEXT_PUBLIC_API_PORT}
+ENV NEXT_PUBLIC_API_ROOT_URL=${NEXT_PUBLIC_API_ROOT_URL}
 
 WORKDIR tezosLink
 
