--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "express": "^4.18.2",
     "module-alias": "^2.2.2",
     "next": "^13.1.5",
+    "pattern-matching-js": "^0.2.0",
     "prisma": "^4.9.0",
     "prisma-query": "^2.0.0",
     "react": "^18.2.0",
