--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,6 +53,7 @@ workflows:
   build-and-register:
     jobs:
       - build-push-docker-image:
+          name: front
           module: frontend
           filters:
             tags:
@@ -60,6 +61,7 @@ workflows:
             branches:
               ignore: /.*/
       - build-push-docker-image:
+          name: api
           module: api
           filters:
             tags:
@@ -67,6 +69,7 @@ workflows:
             branches:
               ignore: /.*/
       - build-push-docker-image:
+          name: proxy
           module: proxy
           filters:
             tags:
@@ -75,7 +78,9 @@ workflows:
               ignore: /.*/
       - deploy-docker-image:
           requires:
-            - build-push-docker-image
+            - proxy
+            - front
+            - api
           filters:
             tags:
               only: /^v.*/
