--- a/tsconfig.json
+++ b/tsconfig.json
@@ -46,6 +46,7 @@
       "@RpcGateway/*": ["src/rpc-gateway/*"],
       "@Page/*": ["src/pages/*"],
       "@Services/*": ["src/common/services/*"],
+      "@Repositories/*": ["src/common/repositories/*"],
       "@Entries/*": ["src/entries/*"],
       "@Common/*": ["src/common/*"],
       "@Config/*": ["src/common/config/*"],
